Add marquee system to breaking news

--- a/themes/manifeste2017/static/src/sass/modules/_breaking-news.scss
+++ b/themes/manifeste2017/static/src/sass/modules/_breaking-news.scss
@@ -44,6 +44,9 @@ $module: ".breaking-news";
         @include font-size(m);
         float: left;
         width: 75%;
+        height: 38px;
+
+        overflow: hidden;
 
         @include mq($until: sm) {
             padding: 0 8px;
