--- a/themes/manifeste2017/templates/includes/footer_scripts.html
+++ b/themes/manifeste2017/templates/includes/footer_scripts.html
@@ -14,6 +14,7 @@
     <script src="{% static "vendors/audiojs/audiojs/audio.js" %}"></script>
     <script src="{% static "vendors/jquery_lazyload/jquery.lazyload.js" %}"></script>
     <script src="{% static "vendors/waypoints/lib/jquery.waypoints.js" %}"></script>
+    <script src="{% static "vendors/jquery.marquee/jquery.marquee.js" %}"></script>
     <script src="{% static "vendors/moment/moment.js" %}"></script>
     <script src="{% static "vendors/moment-timezone/builds/moment-timezone-with-data.js" %}"></script>
     <script src="{% static "js/index.min.js" %}"></script>
