--- a/themes/manifeste2017/templates/magazine/article/article_list.html
+++ b/themes/manifeste2017/templates/magazine/article/article_list.html
@@ -27,13 +27,20 @@
 
 {% block main %}
 <div class="page page--{% spaceless %}{% block page_class %}{% endblock %}{% endspaceless %}">
+
     <div class="container">
         <div class="row">
             <div class="col-sm-16 col-md-10 col-md-push-3 tac">
                 <h1 class="section-title section-title--big section-title--uppercase">{% trans "News" %}</h1>
             </div>
         </div>
-
+        <div class="row">
+            <ul>
+                {% for keyword in keywords %}
+                    <li><a href="{% url 'magazine-article-list' keyword %}" title="">{{ keyword }}</a></li>
+                {% endfor %}
+            </ul>
+        </div>
         <div class="row">
 
             <div class="mb2 col-md-14 col-md-push-1 col-lg-12 col-lg-push-2 page__content" data-summary-content>
