--- a/themes/manifeste2017/templates/agenda/event_detail.html
+++ b/themes/manifeste2017/templates/agenda/event_detail.html
@@ -20,7 +20,7 @@
 {% endblock %}
 
 {% block page_title %}
-    <h1 class="section-title section-title--uppercase section-title--underline section-title--main section-title--no-margin"><a href="{% url 'event_list' %}"><i class="fsl fa fa-angle-left"></i>{% trans "Back to events" %}</a></h1>
+    <h1 class="section-title section-title--uppercase section-title--underline section-title--main"><a href="{% url 'event_list' %}"><i class="fsl fa fa-angle-left"></i>{% trans "Back to events" %}</a></h1>
     {% include 'agenda/includes/event_linecard.html' %}
 {% endblock %}
 
@@ -33,6 +33,19 @@
 {% endblock %}
 
 {% block page_content %}
+
+    {% if event.subtitle %}
+        <div class="page__subtitle">
+            {% editable event.subtitle %}
+                {{ event.subtitle }}
+            {% endeditable %}
+        </div>
+    {% endif %}
+
+    <div class="page__subtitle">
+        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Itaque veritatis voluptatum earum sunt, dolor. Ullam dignissimos consequatur, laudantium maiores atque earum adipisci alias, labore placeat accusantium tenetur velit harum deleniti!
+    </div>
+
     {% include 'agenda/includes/event_metainfo.html' %}
 
     {% block event_detail_content %}
@@ -42,6 +55,7 @@
             {% endeditable %}
         {% endif %}
     {% endblock %}
+
 {% endblock %}
 
 {% block page_link %}
@@ -106,7 +120,7 @@
                                 {% if event.trainings.all %}
                                     {% trans "Trainers" %}<br>
                                 {% else %}
-                                    {% trans "Persons" %}<br>
+                                    {% trans "Artists" %}<br>
                                 {% endif %}
                             </h2>
                         </div>
