Update meta on event detail page

--- a/themes/manifeste2017/static/src/sass/modules/_page.scss
+++ b/themes/manifeste2017/static/src/sass/modules/_page.scss
@@ -179,6 +179,12 @@ $module: ".page";
             text-transform: uppercase;
         }
 
+        small {
+            @include font-size(s);
+            display: block;
+            text-transform: uppercase;
+        }
+
     }
 
     a.page__meta-title {
