--- a/themes/manifeste2017/templates/home/inc/body.html
+++ b/themes/manifeste2017/templates/home/inc/body.html
@@ -1,5 +1,5 @@
 {% load i18n pages_tags mezzanine_tags media_tags organization_tags %}
-<div class="container">
+<div class="container section">
     <div class="row">
         <div class="col-md-14 col-md-push-1 col-lg-12 col-lg-push-2 tac">
             <div class="section-title section-title--uppercase section-title--underline section-title--main">
@@ -27,3 +27,27 @@
         </div>
     </div>
 </div>
+
+{% with home.dynamic_content_home_media.first as dynamic_object %}
+    {% with dynamic_object.content_object.medias.first as playlist %}
+        <div class="container section">
+            <div class="row">
+                <div class="col-md-14 col-md-push-1 col-lg-12 col-lg-push-2">
+
+                    <audio preload="true"></audio>
+
+                    <ol class="audio-playlist">
+                        <li class="audio-playlist__item">
+                            {% for transcoded in playlist.media.transcoded.all %}
+                                {% if transcoded.mime_type == "audio/mp4" or transcoded.mime_type == "audio/mp3" %}
+                                    <a href="#" data-src="{{ transcoded.url }}"><span>{{ playlist.media.title }}</span>{% if playlist.media.description %}<small> {{ playlist.media.description }}</small>{% endif %}</a>
+                                {% endif %}
+                            {% endfor %}
+                        </li>
+                    </ol>
+
+                </div>
+            </div>
+        </div>
+    {% endwith %}
+{% endwith %}
