Fix video player in pages

--- a/themes/manifeste2017/templates/media/inc/playlist_video_slider.html
+++ b/themes/manifeste2017/templates/media/inc/playlist_video_slider.html
@@ -21,7 +21,7 @@
         </div>
     {% endif %}
 
-    <ul class="slider-page" data-slider-page>
+    <ul class="slider-page slider-page--video" data-slider-page>
         {% for media in playlist.medias.all %}
           {% with media.media as media %}
             <li class="slider-page__slide">
