Fix titles in event list and increase event boxes size

--- a/themes/manifeste2017/templates/agenda/event_list.html
+++ b/themes/manifeste2017/templates/agenda/event_list.html
@@ -35,7 +35,7 @@
             </div>
 
             <div class="row">
-                <div class="mb2 col-md-14 col-md-push-1">
+                <div class="mb2 col-md-16 col-lg-14 col-lg-push-1">
                     <form action="{% url 'event_list' %}" method="GET" id="jsEventsForm">
                         {{ filter_form }}
                     </form>
