--- a/themes/manifeste2017/static/src/sass/modules/boxes/_event-line-box.scss
+++ b/themes/manifeste2017/static/src/sass/modules/boxes/_event-line-box.scss
@@ -139,6 +139,7 @@ $module: ".event-line-box";
         position: absolute;
         top: 50%;
         right: 1rem;
+        z-index: 3;
         @include transform(translateY(-50%));
 
         @include mq($until: sm) {
@@ -224,7 +225,7 @@ $module: ".event-line-box";
 
         color: $color-main;
 
-        margin: 0 !important;
+        margin: 0;
         margin-right: 200px;
 
         a:not(.button) {
