Fix breaking news on mobile

--- a/themes/manifeste2017/templates/index.html
+++ b/themes/manifeste2017/templates/index.html
@@ -7,20 +7,17 @@
 
 {% block breaking_news %}
     {% with home.dynamiccontenthomebody_set.all|get_first_brief as brief %}
-        {{ brief.title }}
-    {% endwith %}
-    {% for content in home.dynamiccontenthomebody_set.all %}
-        {% if content.content_type.model == "brief" %}
+        {% if brief.title %}
             <div class="breaking-news" id="jsBreakingNews">
                 <div class="breaking-news__title">
                     {% trans "Breaking News" %}
                 </div>
                 <div class="breaking-news__content marquee" >
-                    {{ content.content_object.title }}
+                    {{ brief.title }}
                 </div>
             </div>
         {% endif %}
-    {% endfor %}
+    {% endwith %}
 {% endblock %}
 
 {% spaceless %}
