--- a/themes/manifeste2017/static/src/sass/modules/boxes/_event-line-box.scss
+++ b/themes/manifeste2017/static/src/sass/modules/boxes/_event-line-box.scss
@@ -143,8 +143,17 @@ $module: ".event-line-box";
         @include transform(translateY(-50%));
 
         @include mq($until: sm) {
-            top: 70px;
             width: auto;
+
+            position: relative;
+            /* width: 100%; */
+            display: block;
+            top: 0;
+            transform: none;
+            /* right: 0; */
+            /* width: 100%; */
+            margin-top: 23px;
+            left: 1.5rem;
         }
 
     }
@@ -242,6 +251,9 @@ $module: ".event-line-box";
         @include mq($until: sm) {
             color: white;
             margin-right: 0px;
+
+            font-size: 22px;
+            line-height: 28px;
         }
 
     }
@@ -257,6 +269,9 @@ $module: ".event-line-box";
 
         @include mq($until: sm) {
             color: white;
+
+            font-size: 14px;
+            line-height: 16px;
         }
 
     }
