--- a/themes/manifeste2017/templates/home/inc/slider.html
+++ b/themes/manifeste2017/templates/home/inc/slider.html
@@ -1,6 +1,6 @@
 {% load i18n pages_tags mezzanine_tags media_tags organization_tags %}
 {% if home.dynamiccontenthomeslider_set.all|length > 0 %}
-    <div class="section container">
+    <div class="section container hide-xs">
         <div class="row">
             <div class="col-sm-16">
                 <div class="slider-home">
