--- a/themes/manifeste2017/templates/includes/calendar.html
+++ b/themes/manifeste2017/templates/includes/calendar.html
@@ -1,4 +1,4 @@
-<div class="container">
+<div class="container hide-xs">
     <div class="row">
         <div class="col-md-14 col-md-push-1">
             <form action="{% url 'event_list' %}" method="GET" id="jsEventsHomeForm">
