--- a/themes/manifeste2017/templates/agenda/event_detail.html
+++ b/themes/manifeste2017/templates/agenda/event_detail.html
@@ -52,6 +52,8 @@
         {% endif %}
     {% endblock %}
 
+    {{ previous_event_url }} 
+    {{ next_event_url }}
 {% endblock %}
 
 {% block page_link %}
