Fix hero on mobile

--- a/themes/manifeste2017/templates/home/inc/hero.html
+++ b/themes/manifeste2017/templates/home/inc/hero.html
@@ -40,7 +40,7 @@ var w=window,
 
     hero.style.height = y + "px";
     body.style.position = "relative";
-    body.style.top = y + "px";
+    body.style.margin = y + "px 0 0 0";
 
     if(breaking) {
         hero.style.height = y-40 + "px";
@@ -59,7 +59,7 @@ var w=window,
 
         hero.style.height = y + "px";
         body.style.position = "relative";
-        body.style.top = y + "px";
+        body.style.margin = y + "px 0 0 0";
 
         if(breaking) {
             hero.style.height = y-40 + "px";
