Add bottom margin to wysiwyg buttons on mobile devices

--- a/themes/manifeste2017/static/src/sass/global/_wysiwyg.scss
+++ b/themes/manifeste2017/static/src/sass/global/_wysiwyg.scss
@@ -30,6 +30,10 @@
 
     @include margin(0 .5 0 0);
 
+    @include mq($until: sm) {
+        margin-bottom: 8px;
+    }
+
 }
 
 .wys-button-small {
@@ -44,6 +48,10 @@
     }
 
     @include margin(0 .5 0 0);
+
+    @include mq($until: sm) {
+        margin-bottom: 8px;
+    }
 
 }
 
@@ -60,6 +68,10 @@
 
     @include margin(0 .5 0 0);
 
+    @include mq($until: sm) {
+        margin-bottom: 8px;
+    }
+
 }
 
 .wys-button-black {
@@ -75,6 +87,10 @@
     }
 
     @include margin(0 .5 0 0);
+
+    @include mq($until: sm) {
+        margin-bottom: 8px;
+    }
 
 }
 
@@ -93,6 +109,10 @@
 
     @include margin(0 .5 0 0);
 
+    @include mq($until: sm) {
+        margin-bottom: 8px;
+    }
+
 }
 
 .wys-button-black-xsmall {
@@ -110,6 +130,10 @@
 
     @include margin(0 .5 0 0);
 
+    @include mq($until: sm) {
+        margin-bottom: 8px;
+    }
+
 }
 
 .wys-button-white {
@@ -125,6 +149,10 @@
     }
 
     @include margin(0 .5 0 0);
+
+    @include mq($until: sm) {
+        margin-bottom: 8px;
+    }
 
 }
 
@@ -143,6 +171,10 @@
 
     @include margin(0 .5 0 0);
 
+    @include mq($until: sm) {
+        margin-bottom: 8px;
+    }
+
 }
 
 .wys-button-white-xsmall {
@@ -160,6 +192,10 @@
 
     @include margin(0 .5 0 0);
 
+    @include mq($until: sm) {
+        margin-bottom: 8px;
+    }
+
 }
 
 .wys-button-white-main {
@@ -168,6 +204,10 @@
     @extend .button--white-main;
 
     @include margin(0 .5 0 0);
+
+    @include mq($until: sm) {
+        margin-bottom: 8px;
+    }
 
 }
 
@@ -179,6 +219,10 @@
 
     @include margin(0 .5 0 0);
 
+    @include mq($until: sm) {
+        margin-bottom: 8px;
+    }
+
 }
 
 .wys-button-white-main-xsmall {
@@ -189,6 +233,10 @@
 
     @include margin(0 .5 0 0);
 
+    @include mq($until: sm) {
+        margin-bottom: 8px;
+    }
+
 }
 
 .wys-button-white-accent {
@@ -197,6 +245,10 @@
     @extend .button--white-main;
 
     @include margin(0 .5 0 0);
+
+    @include mq($until: sm) {
+        margin-bottom: 8px;
+    }
 
 }
 
@@ -208,6 +260,10 @@
 
     @include margin(0 .5 0 0);
 
+    @include mq($until: sm) {
+        margin-bottom: 8px;
+    }
+
 }
 
 .wys-button-white-accent-xsmall {
@@ -217,6 +273,10 @@
     @extend .button--xsmall;
 
     @include margin(0 .5 0 0);
+
+    @include mq($until: sm) {
+        margin-bottom: 8px;
+    }
 
 }
 
