--- a/templates/agenda/includes/event_dates.html
+++ b/templates/agenda/includes/event_dates.html
@@ -3,23 +3,32 @@
 {% with event.periods.all as periods %}
   {# if periods, display periods #}
   {% if periods %}
-    {# bool describing whether we found the same time in periods #}
-    {% with periods|same_time_in_periods as same_time_in_periods %}
-        {% for period in periods %}
-            {% include 'agenda/includes/event_date.html' with date_begin=period.date_from date_end=period.date_to %}
-            {# display only one time a the last loop if same time  #}
-            {% if same_time_in_periods and forloop.last %}
-                {% include 'agenda/includes/event_time.html' with date_obj=period date_begin=period.date_from date_end=period.date_to %}
-            {# not same time, display all differents times #}
-            {% elif not same_time_in_periods %}
-                {% include 'agenda/includes/event_time.html' with date_obj=period date_begin=period.date_from date_end=period.date_to %}
-                <br>
-            {% endif %}
-            {% if not forloop.last and periods|length == 2 %}
-                {% trans 'and' %}<br>
-            {% endif %}
-        {% endfor %}
-    {% endwith %}
+    {# bool describing whether we found the same day in periods #}
+        {% with periods|same_day_in_periods as same_day_in_periods %}
+            {# bool describing whether we found the same time in periods #}
+            {% with periods|same_time_in_periods as same_time_in_periods %}
+                {% for period in periods %}
+                    {% if same_day_in_periods and forloop.first  %}
+                        {% include 'agenda/includes/event_date.html' with date_begin=period.date_from date_end=period.date_to %}
+                    {% elif not same_day_in_periods %}
+                        {% include 'agenda/includes/event_date.html' with date_begin=period.date_from date_end=period.date_to %}
+                    {% endif %}
+                    {# display only one time a the last loop if same time  #}
+                    {% if same_time_in_periods and forloop.last %}
+                        {% include 'agenda/includes/event_time.html' with date_obj=period date_begin=period.date_from date_end=period.date_to %}
+                    {# not same time, display all differents times #}
+                    {% elif not same_time_in_periods %}
+                        {% include 'agenda/includes/event_time.html' with date_obj=period date_begin=period.date_from date_end=period.date_to %}
+                        {% if not same_day_in_periods  %}
+                            <br>
+                        {% endif %}
+                    {% endif %}
+                    {% if not forloop.last and periods|length == 2 and not same_day_in_periods %}
+                        {% trans 'and' %}<br>
+                    {% endif %}
+                {% endfor %}
+            {% endwith %}
+        {% endwith %}
 
   {# else, display event.start and event.end #}
   {% else %}
