--- a/templates/agenda/includes/event_time.html
+++ b/templates/agenda/includes/event_time.html
@@ -5,13 +5,13 @@
     <span class="inline-date">,</span><br>
     {# Event during MORE than 4 hours, display time period #}
     {% if date_obj|period_is_more_than_hours:4 %}
-        {{ date_begin|time:"TIME_FORMAT" }}
+        <span class="inline-date">{{ date_begin|time:"TIME_FORMAT" }}</span>
         {# display end time if exists and not equal to 23:59, because time is required #}
         {% if date_end|date:"H:i" != "23:59" %}
-            - {{ date_end|time:"TIME_FORMAT" }}
+            <span class="inline-date">- {{ date_end|time:"TIME_FORMAT" }}</span>
         {% endif %}
     {# Event during LESS than 4 hours, display only start time #}
     {% else %}
-        {{ date_begin|time:"TIME_FORMAT" }}
+        <span class="inline-date">{{ date_begin|time:"TIME_FORMAT" }}</span>
     {% endif %}
 {% endif %}
