--- a/themes/manifeste2017/templates/index.html
+++ b/themes/manifeste2017/templates/index.html
@@ -42,4 +42,28 @@
         {% include "home/inc/bio.html" %}
     </div>
 
+    {% with home.dynamic_content_home_media.first as dynamic_object %}
+        {% with dynamic_object.content_object.medias.first as playlist %}
+            <div class="container section">
+                <div class="row">
+                    <div class="col-md-14 col-md-push-1 col-lg-12 col-lg-push-2">
+
+                        <audio preload="true"></audio>
+
+                        <ol class="audio-playlist">
+                            <li class="audio-playlist__item">
+                                {% for transcoded in playlist.media.transcoded.all %}
+                                    {% if transcoded.mime_type == "audio/mp4" or transcoded.mime_type == "audio/mp3" %}
+                                        <a href="#" data-src="{{ transcoded.url }}"><span>{{ playlist.media.title }}</span>{% if playlist.media.description %}<small> {{ playlist.media.description }}</small>{% endif %}</a>
+                                    {% endif %}
+                                {% endfor %}
+                            </li>
+                        </ol>
+
+                    </div>
+                </div>
+            </div>
+        {% endwith %}
+    {% endwith %}
+
 {% endblock %}
