--- a/themes/manifeste2017/templates/agenda/includes/event_linecard.html
+++ b/themes/manifeste2017/templates/agenda/includes/event_linecard.html
@@ -48,7 +48,7 @@
                             </object>
                         {% else %}
                         <object class="event-line-box__button">
-                            <span class="button button--accent">
+                            <span class="button button--accent button--no-hover">
                                 {% trans "Free" %}
                             </span>
                         </object>
