--- a/themes/manifeste2017/templates/agenda/includes/event_metainfo.html
+++ b/themes/manifeste2017/templates/agenda/includes/event_metainfo.html
@@ -84,7 +84,7 @@
                         {% endif %}
                     </p>
                 {% else %}
-                    <span class="button button--accent">
+                    <span class="button button--accent button--no-hover">
                         {% trans "Free" %}
                     </span>
                 {% endif %}
