Add some transparency to disabled calendar days

--- a/themes/manifeste2017/static/src/sass/modules/_events-form.scss
+++ b/themes/manifeste2017/static/src/sass/modules/_events-form.scss
@@ -45,7 +45,7 @@
             }
 
             &.disabled {
-                //color: lightgrey;
+                color: lightgrey;
             }
 
             &.active {
