--- a/themes/manifeste2017/static/src/sass/global/_wysiwyg.scss
+++ b/themes/manifeste2017/static/src/sass/global/_wysiwyg.scss
@@ -242,7 +242,7 @@
 .wys-button-white-accent {
 
     @extend .button;
-    @extend .button--white-main;
+    @extend .button--white-accent;
 
     @include margin(0 .5 0 0);
 
@@ -255,7 +255,7 @@
 .wys-button-white-accent-small {
 
     @extend .button;
-    @extend .button--white-main;
+    @extend .button--white-accent;
     @extend .button--small;
 
     @include margin(0 .5 0 0);
@@ -269,7 +269,7 @@
 .wys-button-white-accent-xsmall {
 
     @extend .button;
-    @extend .button--white-main;
+    @extend .button--white-accent;
     @extend .button--xsmall;
 
     @include margin(0 .5 0 0);
