Fix person cards on homepage

--- a/themes/manifeste2017/static/src/sass/modules/boxes/_article-box.scss
+++ b/themes/manifeste2017/static/src/sass/modules/boxes/_article-box.scss
@@ -368,7 +368,8 @@ $module: ".article-box";
 
         #{$module}__image {
 
-            @include fluid-aspect(427 500);
+            //@include fluid-aspect(427 500);
+            @include fluid-aspect(328 380);
 
         }
 
