Truncate the title on cards

--- a/themes/manifeste2017/templates/magazine/article/includes/article_card.html
+++ b/themes/manifeste2017/templates/magazine/article/includes/article_card.html
@@ -6,7 +6,7 @@
 {% endblock %}
 
 {% block title %}
-    {{ object.title }}
+    {{ object.title|truncatechars_html:50 }}
 {% endblock %}
 
 {% block url %}
