--- a/themes/manifeste2017/templates/media/media/includes/media_card.html
+++ b/themes/manifeste2017/templates/media/media/includes/media_card.html
@@ -18,7 +18,7 @@
             <div class="media-box__type">
                 {{ object|get_media_type }}
             </div>
-            <h2 class="media-box__title">{{ object.title }}</h2>
+            <h2 class="media-box__title">{{ object.title|truncatechars_html:50 }}</h2>
             {% if object.description %}
                 <div class="media-box__desc">
                     {{ object.description|richtext_filters|safe|truncatechars_html:200 }}
