Fix hero on mobile devices

--- a/themes/manifeste2017/templates/base.html
+++ b/themes/manifeste2017/templates/base.html
@@ -5,7 +5,7 @@
 <head>
     <meta http-equiv="Content-type" content="text/html; charset=utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, height=device-height, initial-scale=1.0, user-scalable=0, minimum-scale=1.0, maximum-scale=1.0">
     <meta name="keywords" content="{% block meta_keywords %}{% endblock %}">
     <meta name="description" content="{% block meta_description %}{% endblock %}">
     <title>{% spaceless %}{% block meta_title %}{% endblock %}{% endspaceless %}{% if settings.SITE_TITLE %} | {{ settings.SITE_TITLE }}{% endif %}</title>
@@ -54,7 +54,7 @@
     {% endblock %}
 
     {% block header %}
-        <div class="header push" data-sticky data-sticky-detach-at="0">
+        <div id="jsHeader" class="header push" data-sticky data-sticky-detach-at="0">
             <div class="container">
                 <div class="row header__nav">
                     <div class="col-md-16 tal">
