--- a/themes/manifeste2017/templates/home/inc/hero.html
+++ b/themes/manifeste2017/templates/home/inc/hero.html
@@ -35,12 +35,15 @@ var w=window,
     y=w.innerHeight||e.clientHeight||g.clientHeight;
 
     var hero = document.getElementById('jsHero'),
+        header = document.getElementById('jsHeader'),
         body = document.getElementsByTagName("body")[0],
         breaking = document.getElementById('jsBreakingNews');
 
     hero.style.height = y + "px";
+    header.style.top = y + "px";
+    header.setAttribute('data-base-top', y);
     body.style.position = "relative";
-    body.style.margin = y + "px 0 0 0";
+    body.style.padding = y + "px 0 0 0";
 
     if(breaking) {
         hero.style.height = y-40 + "px";
@@ -58,8 +61,9 @@ var w=window,
             y=w.innerHeight||e.clientHeight||g.clientHeight;
 
         hero.style.height = y + "px";
+        header.style.top = y + "px";
         body.style.position = "relative";
-        body.style.margin = y + "px 0 0 0";
+        body.style.padding = y + "px 0 0 0";
 
         if(breaking) {
             hero.style.height = y-40 + "px";
