Hide location filters on event list page

--- a/themes/manifeste2017/static/src/sass/modules/_events-form.scss
+++ b/themes/manifeste2017/static/src/sass/modules/_events-form.scss
@@ -75,6 +75,10 @@
         text-align: center;
     }
 
+    #id_event_locations_filter {
+        display: none;
+    }
+
     #id_event_categories_filter,
     #id_event_locations_filter,
     #id_article_type_filter {
