Decrease footer logo sizes

--- a/themes/manifeste2017/templates/pages/page/includes/linked_organization_footer.html
+++ b/themes/manifeste2017/templates/pages/page/includes/linked_organization_footer.html
@@ -5,11 +5,8 @@
         {% with lof.images|get_type:"logo_footer" as img %}
             {% if img %}
                 {% with img|first as img %}
-                    <img class="footer__partner" src="{{ MEDIA_URL }}{{ img }}" title="{{ img.title }}" width="120" height="66" />
+                    <img class="footer__partner" src="{{ MEDIA_URL }}{{ img }}" title="{{ img.title }}" width="80" />
                 {% endwith %}
-                {% if not forloop.last %}
-                    <span class="footer__partner-separator">&</span>
-                {% endif %}
             {% endif %}
         {% endwith %}
     </a>
