--- a/themes/manifeste2017/templates/magazine/article/article_detail.html
+++ b/themes/manifeste2017/templates/magazine/article/article_detail.html
@@ -155,7 +155,7 @@
 
 {% block page_sidebar %}
 
-    <div class="page__meta" data-sticky data-sticky-parent="row" data-sticky-offset="100" data-sticky-detach-at="1171">
+    <div data-sticky data-sticky-parent="row" data-sticky-offset="100" data-sticky-detach-at="1171">
 
         {% with article as object %}
             {% include "includes/share_buttons.html" %}
