--- a/themes/manifeste2017/templates/media/playlist_detail.html
+++ b/themes/manifeste2017/templates/media/playlist_detail.html
@@ -23,7 +23,7 @@
 
 {% block page_sidebar %}
 
-    <div class="page__meta" data-sticky data-sticky-parent="row" data-sticky-offset="100" data-sticky-detach-at="971">
+    <div data-sticky data-sticky-parent="row" data-sticky-offset="100" data-sticky-detach-at="971">
         {% editable playlist.publish_date %}
             <div class="page__meta-date">
                 {{ playlist.publish_date|date:"DATE_FORMAT" }}
