--- a/themes/manifeste2017/templates/network/person/includes/person_card.html
+++ b/themes/manifeste2017/templates/network/person/includes/person_card.html
@@ -1,39 +1,35 @@
-{% extends "core/inc/generic_card.html" %}
 {% load i18n pages_tags mezzanine_tags media_tags organization_tags %}
 
-{% block metatitle %}
-    {{ object.title }}
-{% endblock %}
-
-{% block title %}
-    {{ object.title }}
-{% endblock %}
-
-{% block url %}
-    {% url 'organization-network-person-detail' object.slug %}
-{% endblock %}
-
-{% block image %}
-    {% with object.images.all|get_type:'card' as images %}
-        <div class="article-box__image-container">
-            {% if images %}
-                <figure class="article-box__image">
-                    <img src="{{ MEDIA_URL }}{% thumbnail images.0.file 427 286 top=0.5 left=object.photo_alignment|get_photo_alignment %}" class="lazyload" />
-                </figure>
-            {% else %}
-                <figure class="article-box__image">
-                    {% if object.department %}
-                        <div class="article-box__placeholder {{object.department.name|slugify}}"></div>
-                    {% else %}
-                        <div class="article-box__placeholder"></div>
-                    {% endif %}
-                </figure>
-            {% endif %}
-
-        </div>
+<div class="article-box article-box--person" >
+    {% with object.images.all|get_type:'card' as card_images %}
+        {% if card_images %}
+            <div class="article-box__header">
+                <a href="{{ person.get_absolute_url }}" title="{{ object.first_name }}&nbsp;{{ object.last_name }}">
+                    <div class="article-box__image-container">
+                        <figure class="article-box__image">
+                            <img class="lazyload" src="{{ MEDIA_URL }}{% thumbnail card_images.first 427 500 top=0.5 %}" alt="person"/>
+                        </figure>
+                    </div>
+                </a>
+            </div>
+        {% endif %}
     {% endwith %}
-{% endblock %}
 
-{% block content %}
-    {{ object.description|richtext_filters|safe|truncatechars_html:200 }}
-{% endblock %}
+    <div class="article-box__content tal">
+
+        <div class="article-box__tags">
+            {% with object.activities.first as activity %}
+                {{ activity.status }}
+            {% endwith%}
+        </div>
+
+        <a href="{{ person.get_absolute_url }}" title="{{ person.first_name }}&nbsp;{{ person.last_name }}"><h3 class="article-box__title">{{ object.first_name }}&nbsp;{{ object.last_name }}</h3></a>
+
+        {% if object.description %}
+            <div class="article-box__desc">{{ object.description|richtext_filters|safe|truncatechars_html:200 }}</div>
+        {% elif object.bio %}
+            <div class="article-box__desc">{{ object.bio|richtext_filters|safe|truncatechars_html:200 }}</div>
+        {% endif %}
+
+    </div>
+</div>
