--- a/themes/manifeste2017/templates/home/inc/slider.html
+++ b/themes/manifeste2017/templates/home/inc/slider.html
@@ -33,9 +33,9 @@
                 {% for slider in home.dynamiccontenthomeslider_set.all %}
                     {% with slider.content_object.images.all|get_type:'slider' as images %}
                         {% if images %}
-                            <div class="col-xs-4">
+                            <div class="col-xs-12">
                                 {% if slider.content_type.model == "event" %}
-                                    {% include "agenda/event/includes/event_card.html" with object=slider.content_object %}
+                                    {% include "agenda/includes/event_linecard.html" with event=slider.content_object %}
                                 {% endif %}
                             </div>
                         {% endif %}
