--- a/themes/manifeste2017/static/src/sass/layout/_footer.scss
+++ b/themes/manifeste2017/static/src/sass/layout/_footer.scss
@@ -122,18 +122,26 @@ $module: ".footer";
 
     }
 
+    &__partners {
+
+        display: flex;
+        align-items: center;
+        justify-content: center;
+
+    }
+
     &__partner {
-        @include mq($until: lg) {
-            width: 80px;
-        }
-        @include mq($until: md) {
-            width: 80px;
-        }
-        @include mq($until: sm) {
-            width: 120px;
-        }
-        @include mq($until: xs) {
-            width: 80px;
+        width: 80px;
+        height: 80px;
+
+        @include margin(0 1);
+
+        display: flex;
+        align-items: center;
+        justify-content: center;
+
+        img {
+            max-width: 100%;
             height: auto;
         }
     }
