--- a/themes/manifeste2017/templates/pages/page/includes/linked_organization_footer.html
+++ b/themes/manifeste2017/templates/pages/page/includes/linked_organization_footer.html
@@ -1,14 +1,20 @@
 {% load organization_tags %}
-{% for lof in linked_organization_footer %}
-    {% if lof.images.all|length > 0 %}
-    <a href="{{ lof.url }}" target="_blank" title="{{ lof.name }}">
-        {% with lof.images|get_type:"logo_footer" as img %}
-            {% if img %}
-                {% with img|first as img %}
-                    <img class="footer__partner" src="{{ MEDIA_URL }}{{ img }}" title="{{ img.title }}" width="80" />
+<div class="footer__partners">
+    
+    {% for lof in linked_organization_footer %}
+        {% if lof.images.all|length > 0 %}
+
+            <a class="footer__partner" href="{{ lof.url }}" target="_blank" title="{{ lof.name }}">
+                {% with lof.images|get_type:"logo_footer" as img %}
+                    {% if img %}
+                        {% with img|first as img %}
+                            <img src="{{ MEDIA_URL }}{{ img }}" title="{{ img.title }}" width="80" />
+                        {% endwith %}
+                    {% endif %}
                 {% endwith %}
-            {% endif %}
-        {% endwith %}
-    </a>
-    {% endif %}
-{% endfor %}
+            </a>
+
+        {% endif %}
+    {% endfor %}
+
+</div>
