--- a/themes/manifeste2017/templates/media/inc/playlist_audio_card.html
+++ b/themes/manifeste2017/templates/media/inc/playlist_audio_card.html
@@ -1,7 +1,7 @@
 {% load mezzanine_tags keyword_tags i18n organization_tags staticfiles %}
 <div class="">
-    <div class="media-box media-box--{{ playlist.type }}">
-        <a class="media-box" href="{% url 'organization-playlist-detail' playlist.slug %}">
+    <a class="media-box media-box--{{ playlist.type }}" href="{% url 'organization-playlist-detail' playlist.slug %}">
+        <div class="media-box__image-container">
             <figure class="media-box__image media-box__image--audio">
                 {% if playlist.medias.all.0.media.poster_url %}
                     <img src="{{ playlist.medias.all.0.media.poster_url }}">
@@ -9,13 +9,15 @@
                     <div class="media-box__placeholder"></div>
                 {% endif %}
             </figure>
+        </div>
+        <div class="media-box__content">
             <div class="media-box__type">
                 {{playlist.type}}
             </div>
-            <h2 class="media-box__title">{{ playlist.title }}</h2>
+            <h2 class="media-box__title">{{ playlist.title|truncatechars_html:50 }}</h2>
             <div class="media-box__desc">
                 {{ playlist.description|richtext_filters|safe|truncatechars_html:200 }}
             </div>
-        </a>
-    </div>
+        </div>
+    </a>
 </div>
