--- a/themes/manifeste2017/templates/media/inc/playlist_audio_card.html
+++ b/themes/manifeste2017/templates/media/inc/playlist_audio_card.html
@@ -5,6 +5,10 @@
             <figure class="media-box__image media-box__image--audio">
                 {% if playlist.medias.all.0.media.poster_url %}
                     <img src="{{ playlist.medias.all.0.media.poster_url }}">
+                {% elif playlist.medias.all.0.media.images.all|get_type:'card' %}
+                    {% with playlist.medias.all.0.media.images.all|get_type:'card' as images %}
+                        <img src="{{ MEDIA_URL }}{% thumbnail images.0.file 427 300 top=0.5 %}">
+                    {% endwith %}
                 {% else %}
                     <div class="media-box__placeholder"></div>
                 {% endif %}
