Fix reserve button for training events

--- a/templates/agenda/includes/event_metainfo.html
+++ b/templates/agenda/includes/event_metainfo.html
@@ -63,7 +63,7 @@
         {% endif %}
         {% if not event.is_full %}
         <p>
-            {% if event.trainings.all|length %}
+            {% if event.trainings.all|length and not event.external_id %}
                 {% with event.links.all as links %}
                     {% if links %}
                         <a class="button button--block" href="{{ links|get_type_link:'link'|first }}" class="event__meta__btn">
