--- a/templates/pages/menus/current_tree_event.html
+++ b/templates/pages/menus/current_tree_event.html
@@ -36,12 +36,12 @@
                         <ul class="nav-tree nav-tree--level-{{ branch_level }}">
                             {% page_menu page %}
                         </ul>
-                        <ul class="nav-tree" data-summary>
+                        <ul class="nav-tree" {% if not is_archive %}data-summary{% endif %}>
                             {% include "pages/menus/current_tree_summary.html" %}
                         </ul>
                     {% endif %}
                     {% if page.is_current_or_ascendant and not page.has_children_in_menu %}
-                        <ul class="nav-tree" data-summary>
+                        <ul class="nav-tree" {% if not is_archive %}data-summary{% endif %}>
                             {% include "pages/menus/current_tree_summary.html" %}
                         </ul>
                     {% endif %}
@@ -51,11 +51,12 @@
     {% endif %}
     {% if branch_level == 2 %}
         {% for page in page_branch %}
-            {% comment %}
             <li class="nav-tree__item nav-tree__item--sub">
-                <a class="nav-tree__link nav-tree__link--sub" href="{{ page.get_absolute_url }}">{{ page.title }}</a>
+                <a class="nav-tree__link{% if page.is_current or page.is_current_or_ascendant %} active{% endif %} nav-tree__link--sub" href="{{ page.get_absolute_url }}">{{ page.title }}</a>
+                <ul class="nav-tree" {% if is_archive and page.is_current or page.is_current_or_ascendant %}data-summary{% endif %}>
+                    {% include "pages/menus/current_tree_niv4.html" %}
+                </ul>
             </li>
-            {% endcomment %}
         {% endfor %}
     {% endif %}
 {% endif %}
